Bug 1260059 - Allow setting/resetting junk marking by user for yahoo/aol to stick. r=jorgk DONTBUILD

--HG--
extra : rebase_source : d7314bccbf398ef69745261f4a860ec12dc0d6ae