mailnews/imap/src/nsImapServerResponseParser.h
@@ -51,6 +51,7 @@ public:
   virtual eIMAPstate GetIMAPstate();
   virtual bool WaitingForMoreClientInput() { return fWaitingForMoreClientInput; }
   const char *GetSelectedMailboxName();   // can be NULL
+  bool IsStdJunkNotJunkUseOk() { return fStdJunkNotJunkUseOk; }
 
   // if we get a PREAUTH greeting from the server, initialize the parser to begin in
   // the kAuthenticated state
@@ -198,6 +199,7 @@ private:
   bool            fDownloadingHeaders;
   bool            fCurrentCommandIsSingleMessageFetch;
   bool            fGotPermanentFlags;
+  bool            fStdJunkNotJunkUseOk;
   imapMessageFlagsType   fSavedFlagInfo;
   nsTArray<nsCString> fCustomFlags;
 
